# argos-ros

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  start-vnc.sh
scripts/: calibrate.sh
src/argos_bringup/: package.xml  setup.cfg  setup.py
src/argos_bringup/launch/: argos.launch.py  aruco_viz.launch.py  motors.launch.py  robot_calibration.launch.py  sensors.launch.py
src/argos_description/: CMakeLists.txt  package.xml
src/argos_description/launch/: display.launch.py
src/argos_description/rviz/: argos.rviz  argos_aruco.rviz
src/argos_description/urdf/: argos.urdf.xacro
src/argos_hardware/: package.xml  setup.cfg  setup.py
src/argos_hardware/argos_hardware/: ahrs_node.py  aruco_node.py  calibrate_axes_node.py  calibrate_mag_node.py  camera_node.py  control_panel_node.py  flotilla_node.py  hardware_bridge_node.py  imu_node.py  ir_node.py  joint_state_estimator_node.py  sonar_node.py
src/argos_hardware/argos_hardware/core/: config.py
src/argos_hardware/argos_hardware/core/arm/: joints.py
src/argos_hardware/argos_hardware/core/base/: tracks.py
src/argos_hardware/argos_hardware/core/drivers/: gpio_motor.py  pca9685.py
src/argos_hardware/argos_hardware/core/safety/: monitor.py
src/argos_hardware/argos_hardware/core/sensorium/: ahrs.py  flotilla.py  imu.py  ir.py  sonar.py
src/argos_hardware/argos_hardware/core/vision/: camera.py
src/argos_hardware/config/: c270_1280x720.yaml  c270_640x480.yaml  joint_state_estimator.yaml
src/argos_msgs/: CMakeLists.txt  package.xml
src/argos_msgs/msg/: AhrsData.msg  FlotillaData.msg  IrProximity.msg  JointSpeeds.msg
