<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>argos_bringup</name>
  <version>0.1.0</version>
  <description>ARGOS robot launch files</description>
  <maintainer email="zimchaa@argos-ros.local">zimchaa</maintainer>
  <license>MIT</license>

  <depend>argos_hardware</depend>
  <depend>argos_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
